--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Ed Tech</title>
+<title>TimeSpare</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
@@ -42,7 +42,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <a class="navbar-brand page-scroll" href="#page-top">Ed Tech</a> </div>
+      <a class="navbar-brand page-scroll" href="#page-top">TimeSpare</a> </div>
     
    
   </div>
@@ -54,7 +54,7 @@
       <div class="container">
         <div class="row">
           <div class="intro-text">
-            <h1>Ed Tech</h1>
+            <h1>TimeSpare</h1>
             <p>Learn it all in just minutes....</p>
             <a href="index2.html" class="btn btn-custom btn-lg page-scroll">Get Started</a>
 			<p><a href="login.html" class="btn btn-custom btn-lg page-scroll">Login or Signup</a> </div></p>
