Removed names from login and register pages

--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
 
-  <title>CodePen - Random Login Form</title>
+  <title>TimeSpare - Login</title>
 
     <style>
 @import url(http://fonts.googleapis.com/css?family=Exo:100,200,400);
@@ -159,7 +159,7 @@ body{
   <div class="body"></div>
 		<div class="grad"></div>
 		<div class="header">
-			<div><b>Ed<b><span><b>Tech<b></span></div>
+			<div><b>Time<b><span><b>Spare<b></span></div>
 		</div>
 		<br>
 		<div class="login">
@@ -170,7 +170,7 @@ body{
 				<a href="register.html" ><input type="button" value="sign up"></a>
 		</div>
 
-  <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
+  
 
 </body>
 
