--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
 
   <meta charset="UTF-8">
 
-  <title>CodePen - Random Login Form</title>
+  <title>TimeSpare Register</title>
 
     <style>
 @import url(http://fonts.googleapis.com/css?family=Exo:100,200,400);
@@ -159,7 +159,7 @@ body{
   <div class="body"></div>
 		<div class="grad"></div>
 		<div class="header">
-			<div><b>Ed<b><span><b>Tech<b></span></div>
+			<div><b>Time<b><span><b>Spare<b></span></div>
 		</div>
 		<br>
 		<div class="login">
@@ -169,7 +169,7 @@ body{
 				<input type="button" value="Sign up">
 		</div>
 
-  <script src='http://codepen.io/assets/libs/fullpage/jquery.js'></script>
+  
 
 </body>
 
