--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="google-site-verification" content="craIWvFIoNZ9BdImgDrsGYUvw9SQETTPpfY6DFC_P78" />
 <title>TimeSpare</title>
 <meta name="description" content="">
 <meta name="author" content="">
