--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>TimeSpare</title>
+<title><img src="https://scontent-sin6-1.xx.fbcdn.net/v/t1.0-0/p480x480/16864493_1447308965303182_3431222256447051930_n.jpg?oh=7802c22a91ee7c83def8bdb1259917a4&oe=5943077E" />TimeSpare</title>
 <meta name="description" content="">
 <meta name="author" content="">
 
