Fix Typo on landing pg

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="row">
           <div class="intro-text">
             <h1>TimeSpare</h1>
-            <p><font size = +1>Have a little free time before you leave for class? Got 15 minutes to kill before a meeting? Bored standing in line waiting for a bus? Well, instead of whiling away time scrolling through endless umb social media feeds why not learn something that might actually be useful sometime in your life. Welcome to TimeSpare!
+            <p><font size = +1>Have a little free time before you leave for class? Got 15 minutes to kill before a meeting? Bored standing in line waiting for a bus? Well, instead of whiling away time scrolling through endless dumb social media feeds, why not learn something that might actually be useful. Welcome to TimeSpare!
 			Learn it all in a matter of minutes....</font></p>
             <a href="index2.html" class="btn btn-custom btn-lg page-scroll">Get Started</a>
 			<p><a href="login.html" class="btn btn-custom btn-lg page-scroll">Login or Signup</a> </div></p>
